[tool.poetry]
name = "wab"
version = "0.1.0"
description = ""
authors = ["Kenni Jørgensen <kenni@argyle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
pyright = "^1.1.347"
radon = "^6.0.1"

[tool.poetry.scripts]
wab = "wab.main:app"
wabbi = "wabbi.main:app"
wabbit = "wabbit.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
